test/deca/context/valid/3_31_print_float.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche 1.23000e+01

{
    print(12.3);

}