test/deca/context/invalid/3_31_print_bool.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Ligne 9 : Print d'un type incompatible

{
    boolean b;
    print(b);

}
